Update README with roadmap and add agent git rules

--- a/.agent/rules
+++ b/.agent/rules
@@ -23,3 +23,7 @@
 - 前端可採用 Gradio 或 Streamlit 快速建立介面
 - 程式碼風格遵循 PEP 8
 - 變數命名以英文為主，註解使用中文
+
+## 版本控制規則
+- 在每次功能修正或完成重要工作後，必須主動詢問使用者是否要執行 `git update`
+- 若使用者同意，則執行 `git add .`, `git commit`, `git push` 流程
